[package]
name = "compliance-controls"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Compliance controls as Rust types — NIST 800-53, CIS, FedRAMP, PCI-DSS, SOC2"
license = "MIT"
repository = "https://github.com/pleme-io/compliance-controls"

[lints.clippy]
pedantic = "warn"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
